@@ -1,0 +1,13 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:zcml="http://namespaces.zope.org/zcml"
+  i18n_domain="eea">
+
+  <adapter
+    for=".interfaces.ISpecification"
+    provides="archetypes.schemaextender.interfaces.ISchemaModifier"
+    factory=".Specification.SpecificationThemeSchemaModifier"
+    />
+
+
+</configure>
